Mentorship: add gender support to mentee-facing messages
* Remove IIFE in HelpPanelHomeButtonWidget.js
* Inject GenderCache via Mentorship's constructor rather than accessing it directly

Bug: T309073
Change-Id: I250189886fe9b0c76dc12dee8c92814b3f89ecfb

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -149,7 +149,7 @@
 	"tag-help_panel_question-description": "Edit made from the help panel's post a question feature",
 	"growthexperiments-help-panel-button-preheader-suggested-edits": "Suggested edits",
 	"growthexperiments-help-panel-button-header-ask-help": "Ask the help desk",
-	"growthexperiments-help-panel-button-header-ask-help-mentor": "Ask your mentor for help",
+	"growthexperiments-help-panel-button-header-ask-help-mentor": "Ask {{GENDER:|your}} {{GENDER:$1|mentor}} for help",
 	"growthexperiments-help-panel-button-header-general-help": "General editing help",
 	"growthexperiments-help-panel-button-subheader-general-help": "Search for answers and read top articles",
 	"growthexperiments-help-panel-button-subheader-ask-help": "Get answers from other volunteers",
