--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -84,7 +84,7 @@
 	"growthexperiments-homepage-impact-unactivated-description": "Once {{GENDER:$1|you}} start editing, {{GENDER:$1|you'll}} see here how many people are viewing the articles {{GENDER:$1|you've}} edited.",
 	"growthexperiments-tour-helpdesk-response-tip-title": "Help desk alerts",
 	"growthexperiments-tour-response-tip-text": "When {{GENDER:$1|your}} question is answered, {{GENDER:$1|you}} will have a new alert here.",
-	"growthexperiments-tour-mentor-response-tip-personal-title": "Mentor alerts",
+	"growthexperiments-tour-mentor-response-tip-personal-title": "{{GENDER:$1|Mentor}} alerts",
 	"growthexperiments-tour-mentor-response-tip-personal-text": "When {{GENDER:$1|your}} {{GENDER:$2|mentor}} responds, {{GENDER:$1|you}} will have a new alert here.",
 	"growthexperiments-tour-response-button-okay": "Got it",
 	"tag-help_module_question": "Help module question",
@@ -118,7 +118,7 @@
 	"growthexperiments-homepage-recent-questions-archived": "archived",
 	"growthexperiments-homepage-recent-questions-archived-tooltip": "This question has been archived, likely because it was asked a long time ago.",
 	"growthexperiments-homepage-mentorship-header": "{{GENDER:$1|Your}} {{GENDER:$2|mentor}}",
-	"growthexperiments-homepage-mentorship-preintro": "We’ve assigned {{GENDER:|you}} an experienced editor to answer your questions about editing.",
+	"growthexperiments-homepage-mentorship-preintro": "We’ve assigned {{GENDER:|you}} {{GENDER:$1|an experienced editor}} to answer your questions about editing.",
 	"growthexperiments-homepage-mentorship-learn-more": "Learn more about mentors.",
 	"growthexperiments-homepage-mentorship-mentor-edits": "$1 {{PLURAL:$1|edit|edits}}",
 	"growthexperiments-homepage-mentorship-mentor-active-today": "{{GENDER:$1|Active}} today",
@@ -505,7 +505,7 @@
 	"growthexperiments-homepage-mentorship-ellipsis-menu-about": "About mentors",
 	"growthexperiments-homepage-mentorship-ellipsis-menu-optout": "Opt out of mentorship",
 	"growthexperiments-homepage-mentorship-optout-header": "Opt out of mentoring?",
-	"growthexperiments-homepage-mentorship-optout-text": "You can always opt back into mentorship again. However, you may not receive the same mentor as before.",
+	"growthexperiments-homepage-mentorship-optout-text": "You can always opt back into mentorship again. However, you may not receive the same {{GENDER:$1|mentor}} as before.",
 	"growthexperiments-homepage-mentorship-optout-cancel": "Cancel",
 	"growthexperiments-homepage-mentorship-optout-optout": "Opt out",
 	"growthexperiments-homepage-mentorship-optout-confirmation-header": "{{GENDER:|You're}} no longer being mentored.",
@@ -515,7 +515,7 @@
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-other": "Other / I’d prefer not to say",
 	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Done",
 	"growthexperiments-homepage-mentorship-about-header": "About mentors",
-	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Who is {{GENDER:|your}} mentor?",
+	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Who is {{GENDER:|your}} {{GENDER:$1|mentor}}?",
 	"growthexperiments-homepage-mentorship-about-mentor-par1": "{{GENDER:|Your}} {{GENDER:$1|mentor}} is another person with a lot of experience editing on {{SITENAME}}. {{GENDER:$1|He’s|She’s|They’ve}} volunteered to guide newer people like you on how to edit, and can answer questions {{GENDER:|you}} may have about using the site.",
 	"growthexperiments-homepage-mentorship-about-mentor-par2": "When {{GENDER:|you}} send a message to your mentor, {{GENDER:$1|he|she|they}} will see it on {{GENDER:$1|his|her|their}} user talk page and {{GENDER:|you}} should receive a notification when {{GENDER:$1|he replies|she replies|they reply}}.",
 	"growthexperiments-homepage-mentorship-about-subheader-optout": "Opt out of mentorship",
