--- a/i18n/homepage/qqq.json
+++ b/i18n/homepage/qqq.json
@@ -104,7 +104,7 @@
 	"growthexperiments-homepage-impact-unactivated-description": "Text shown in the unactivated state of the Impact module describing what the module will show upon activation. \n* $1 - Name of the current user. Can be used with GENDER\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-tour-helpdesk-response-tip-title": "Title of a popup pointing at the incoming messages inbox icon to inform users about where they will be able to find replies from the community help desk.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-tour-response-tip-text": "Description of the incoming messages inbox feature shown to new users.\n* $1 - Current user's name, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-tour-mentor-response-tip-personal-title": "Title of a popup pointing at the incoming messages inbox icon to inform users about where they will be able to find replies from mentors.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-tour-mentor-response-tip-personal-title": "Title of a popup pointing at the incoming messages inbox icon to inform users about where they will be able to find replies from mentors.\n* $1 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-tour-mentor-response-tip-personal-text": "Description of the incoming messages inbox feature shown to new users after they send a question to their mentor.\n* $1 - Current user's name, to be used with GENDER.\n* $2 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-tour-response-button-okay": "Button which allows the user to confirm that they understood the related explanation text.\n\n{{doc-growthexperiments-homepage}}",
 	"tag-help_module_question": "Short change tag name for edits made by the \"Ask a question\" feature in the help panel, which allows users to post questions directly to their wiki's help desk.\n\n{{doc-growthexperiments-homepage}}",
@@ -138,7 +138,7 @@
 	"growthexperiments-homepage-recent-questions-archived": "Text to show alongside a link to the archived question that the user posted.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-recent-questions-archived-tooltip": "Text to show in the title attribute of a link to an archived question.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-header": "Header of the mentorship module, which assigns an experienced editor to all new users so that they can ask for help.\n* $1 - Name of the current user. Can be used with GENDER.\n* $2 - Name of the mentor. Can be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-homepage-mentorship-preintro": "Explanatory text displayed in the mentorship module, explaining what mentorship is about.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-preintro": "Explanatory text displayed in the mentorship module, explaining what mentorship is about.\n* $1 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-learn-more": "Description of a link that opens a modal, explaining what mentorship is about in more details. Displays at the top of the mentorship module.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-mentor-edits": "Text in the mentorship module showing how many edits a user's mentor has.\n* $1 - Mentor's edit count.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-mentor-active-today": "Text in the mentorship module for when the user's mentor's latest edit is today.\n* $1 - Name of the mentor. Can be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
@@ -525,7 +525,7 @@
 	"growthexperiments-homepage-mentorship-ellipsis-menu-about": "Item in mentorship module's ellipsis menu\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-ellipsis-menu-optout": "Item in mentorship module's ellipsis menu\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-header": "Header of a confirmation dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-homepage-mentorship-optout-text": "Text of a confirmation shown when user opts out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-optout-text": "Text of a confirmation shown when user opts out from mentorship.\n* $1 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-cancel": "Label of a button in the confirmation shown when user opts out from mentorship.\n\n{{doc-growthexperiments-homepage}}\n\n{{Identical|Cancel}}",
 	"growthexperiments-homepage-mentorship-optout-optout": "Label of a button in the confirmation shown when user opts out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-confirmation-header": "Header of a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
@@ -535,7 +535,7 @@
 	"growthexperiments-homepage-mentorship-optout-confirmation-reason-other": "Possible reason to opt-out. Shown in a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Possible reason to opt-out. Shown in a feedback dialog shown when an user is opting out from mentorship.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-about-header": "Header of the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Subheader of the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Subheader of the \"About mentorship\" dialog\n* $1 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-about-mentor-par1": "Text displayed in the \"About mentorship\" dialog\n* $1 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-about-mentor-par2": "Text displayed in the \"About mentorship\" dialog\n* $1 - Mentor's gender, to be used with GENDER.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-homepage-mentorship-about-subheader-optout": "Subheader of the \"About mentorship\" dialog\n\n{{doc-growthexperiments-homepage}}",
