Mentorship: add gender support to mentor-facing messages
Bug: T309073
Change-Id: Iae8beac38dc440e03be92e901b816095d25a5bbb

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -17,7 +17,7 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-userinfo": "Username",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-reverts": "Number of reverted edits",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-blocks": "Number of blocks",
-	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-questions": "Mentor questions asked",
+	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-questions": "{{GENDER:|Mentor}} questions asked",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-editcount": "Edit count",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-registration": "Registration date",
 	"growthexperiments-mentor-dashboard-mentee-overview-add-filter": "Filters",
@@ -42,12 +42,12 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-text": "Change your filters to find mentees.",
 	"growthexperiments-mentor-dashboard-resources-headline": "Resources",
 	"growthexperiments-mentor-dashboard-resources-link-mentors-list": "The mentor list",
-	"growthexperiments-mentor-dashboard-resources-link-how-to-introduce": "How to introduce yourself as a mentor",
+	"growthexperiments-mentor-dashboard-resources-link-how-to-introduce": "How to introduce {{GENDER:|yourself}} as a {{GENDER:|mentor}}",
 	"growthexperiments-mentor-dashboard-resources-link-claim-mentee": "How to claim a mentee",
 	"growthexperiments-mentor-dashboard-resources-link-tools": "Growth tools",
 	"growthexperiments-mentor-dashboard-mentor-tools-headline": "Settings",
 	"growthexperiments-mentor-dashboard-mentor-tools-info-headline": "Mentoring information",
-	"growthexperiments-mentor-dashboard-mentor-tools-info-text": "This module contains settings for your mentor status. If however, you wish to quit mentoring permanently, instructions on how to do so are on the following page: [[Special:QuitMentorship|How to quit mentoring?]]",
+	"growthexperiments-mentor-dashboard-mentor-tools-info-text": "This module contains settings for {{GENDER:|your}} mentor status. If however, {{GENDER:|you}} wish to quit mentoring permanently, instructions on how to do so are on the following page: [[Special:QuitMentorship|How to quit mentoring?]]",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-headline": "Mentor status",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-active": "Active",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-away": "Away",
@@ -55,7 +55,7 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-headline": "Set yourself as ‘away’",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-cancel": "Cancel",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-submit": "Pause",
-	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-text": "If you cannot mentor for a specific time period (more than 1 week) you can set yourself as away. During that period another mentor will receive questions from your mentees.",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-text": "If {{GENDER:|you}} cannot mentor for a specific time period (more than 1 week) {{GENDER:|you}} can set {{GENDER:|yourself}} as away. During that period another mentor will receive questions from {{GENDER:|your}} mentees.",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for": "You’ll be gone for:",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for-label": "days",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-badinteger": "Input in \"{{GENDER:|You'll}} be gone for\" is not an integer. Please try again.",
