MentorTools: Make it possible to change one's auto-assignment status
This should be only visible to users when GEMentorProvider is structured,
because it depends on an API that only works with structured providers.

Bug: T264343
Change-Id: If007f07cfb9fc5854b6680ad21c72f76099e8a8f

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -86,6 +86,7 @@
 	"growthexperiments-notification-body-mentee-claimed": "Reason: $1",
 	"growthexperiments-notification-secondary-link-label-mentee-claimed": "What is \"Claim mentee\"?",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-headline": "Number of mentees assigned to me",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-none": "None",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-low": "About half the average",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-medium": "Average (the default)",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-high": "About twice the average",
