--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -92,6 +92,7 @@
 	"growthexperiments-notification-body-mentee-claimed": "Body of the notification sent to old mentor after one of their mentees was claimed.\n\nParameters:\n* $1: reason of the change",
 	"growthexperiments-notification-secondary-link-label-mentee-claimed": "Label of the secondary link in the notification sent to old mentor after one of their mentees was claimed.",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-headline": "Subheader in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-none": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-low": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-medium": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-weight-high": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
