NewImpact: Add base class and config
* Add class for the "New Impact" module
* Add GEUseNewImpactModule config. Set to true, the new impact module
replaces the old one. Set to false, the old one is used.
* Users can display the new module via a query parameter, e.g.
  Special:Homepage?new-impact=1

Bug: T311299
Change-Id: Idf2a3b73208f123e0a5101c4bfa8acce53e64ec2

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -60,6 +60,7 @@
 	"growthexperiments-homepage-startediting-dialog-difficulty-level-medium-description-body": "Adding reliable sources and updating articles that are out of date",
 	"growthexperiments-homepage-startediting-dialog-difficulty-level-hard-description-body": "Create new articles and expand short articles.",
 	"growthexperiments-homepage-suggested-edits-header": "Suggested edits",
+	"growthexperiments-homepage-new-impact-header": "{{GENDER:$1|Your}} impact",
 	"growthexperiments-homepage-impact-header": "{{GENDER:$1|Your}} impact",
 	"growthexperiments-homepage-impact-subheader-text": "People are viewing the articles {{GENDER:$1|you}} edited!",
 	"growthexperiments-homepage-impact-subheader-subtext": "Views since {{GENDER:$1|you}} edited (last 60 days):",
