--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -120,5 +120,12 @@
 	"growthexperiments-manage-mentors-remove-mentor-pretext": "Header of mentor removal form in Special:ManageMentors",
 	"growthexperiments-manage-mentors-remove-mentor-reason": "Label in mentor removal form in Special:ManageMentors",
 	"growthexperiments-manage-mentors-remove-mentor-success": "Success message shown after a mentor is successfully removed via Special:ManageMentors.",
-	"growthexperiments-manage-mentors-return-back": "Link back to Special:ManageMentors. Shown after a write action (eg. removal of a mentor) is successfully submitted via Special:ManageMentors."
+	"growthexperiments-manage-mentors-return-back": "Link back to Special:ManageMentors. Shown after a write action (eg. removal of a mentor) is successfully submitted via Special:ManageMentors.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentorship-enrollasmentor-title": "Title for Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentorship-enrollasmentor-pretext": "An introduction message shown in Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentorship-enrollasmentor-form-message": "Field label in Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentorship-enrollasmentor-form-message-help": "Field help text in Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentorship-enrollasmentor-form-reason": "Field label in Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentorship-enrollasmentor-enroll": "Submit text in Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentorship-enrollasmentor-success": "Success message shown after enrolling as a mentor via Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}"
 }
