AddImage: Send event when user accepts/rejects/invalidates suggestion
Depends-On: I3e094fb4a94e077766a60d2841378c7b902d9466
Depends-On: I3012b0da7e28c7bd51e85d536965dfecbb4aaf98
Depends-On: I6528b84bf9bcf57656c48b0b0c8c1c0eaea2507d
Depends-On: Ia0c2da07665e172ce3e05cd3afa02a5b814bb6fd
Bug: T306034
Change-Id: I0d2f5f977254b2d4329f54b6682726a87066b98c

--- a/i18n/homepage/api/qqq.json
+++ b/i18n/homepage/api/qqq.json
@@ -13,7 +13,9 @@
 	"apihelp-growthsetmentor-param-mentee": "{{doc-apihelp-param|growthsetmentor|mentee}}",
 	"apihelp-growthsetmentor-param-mentor": "{{doc-apihelp-param|growthsetmentor|mentor}}",
 	"apihelp-growthsetmentor-param-reason": "{{doc-apihelp-param|growthsetmentor|reason}}",
+	"apihelp-query+growthimagesuggestiondata-summary": "{{doc-apihelp-param|growthimagesuggestiondata}}",
 	"apihelp-growthinvalidateimagerecommendation-summary": "{{doc-apihelp-summary|growthinvalidateimagerecommendation}}",
+	"apihelp-growthinvalidateimagerecommendation-extended-description": "{{doc-apihelp-extended-description|growthimagesuggestiondata}}",
 	"apihelp-growthinvalidateimagerecommendation-param-title": "{{doc-apihelp-param|growthinvalidateimagerecommendation|title}}",
-	"apihelp-query+growthimagesuggestiondata-summary": "{{doc-apihelp-param|growthimagesuggestiondata}}"
+	"apihelp-growthinvalidateimagerecommendation-param-filename": "{{doc-apihelp-param|growthinvalidateimagerecommendation|filename}}"
 }
