--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -82,6 +82,8 @@
 	"growthexperiments-quit-mentorship-title": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-listed-as-mentor-pretext": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-not-listed-has-mentees-pretext": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-quit-mentorship-has-mentees-pretext": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-quit-mentorship-reason": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-reassign-mentees-confirm": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-success": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-no-mentees": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
