--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -110,6 +110,7 @@
 	"growthexperiments-mentor-list-unexpected-key-mentor": "Error message displayed when a manual save of MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) is invalid.",
 	"growthexperiments-mentor-writer-error-already-added": "Error message displayed when a change to MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) tries to add a mentor who is already added",
 	"growthexperiments-mentor-writer-error-not-in-the-list": "Error message displayed when a change to MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) tries to remove/change a mentor who is not in the list",
+	"growthexperiments-mentor-writer-error-anonymous-user": "Error message displayed when a change to MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) tries to remove/change a mentor who is not in the list",
 	"growthexperiments-manage-mentors-title": "Headline of Special:ManageMentors",
 	"growthexperiments-manage-mentors-error-no-such-user": "Error message shown by Special:ManageMentors when a given mentor does not exist. This message only shows if user manually changes their URL address, or when links in the interface are incorrect.",
 	"growthexperiments-manage-mentors-auto-assigned": "Headline in Special:ManageMentors",
