Mentee overview (vue): add labels to all icons
* wrap star icon in a quiet button to make it
keyboard accessible
* handle text overflow for long usernames
with ellipsis

Bug: T312158
Change-Id: I05a8236b0a3b44ec8754aae39d39784713a47d36

--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -17,6 +17,7 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-intro": "Introduction for the \"Mentee overview\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-no-js-fallback": "Error message shown to no-JS users.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-headline": "Headline in the info icon popup\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentee-overview-info-icon-label": "Icon label in the info icon popup\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-text": "Intro text in the icon popup\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-headline": "Headline for table legend in info icon popup\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-star": "Part of table legend in info icon popup\n\n{{doc-growthexperiments-mentor-dashboard}}",
@@ -37,11 +38,17 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-active-days-ago-days-title": "Tooltip in mentee filter interface\n\nParameters:\n* $1: raw number of days (to be used with PLURAL)\n* $2: formatted number of days (to be displayed in the interface)\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-active-days-ago-months-title": "Tooltip in mentee filter interface\n\nParameters:\n* $1: raw number of months (to be used with PLURAL)\n* $2: formatted number of months (to be displayed in the interface)\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-starred-only-starred": "Label in mentee filter interface\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentee-overview-filters-expand-icon-label": "Icon label for the expand icon in the mentees filters form\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentee-overview-filters-collapse-icon-label": "Icon label for the collapse icon in the mentees filters form\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-search-placeholder": "Placeholder in the search box\n\n{{doc-growthexperiments-mentor-dashboard}}\n\n{{identical|Search}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-active-ago": "Display user activity\n\nParameters:\n* $1 - last time user saved an edit in human readable form\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-registered-unknown": "Message displayed instead of user tenure when it is unavailable\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-show-entries": "Label for the page size filter\n\nParameters:\n* $1 - page size in number of rows\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentee-overview-star-mentee-icon-label": "Icon label for the star icon in the mentee table rows\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-page-counter": "Shows which page is displayed.\n\nParameters:\n* $1 - number of current page\n* $2 - number of total pages\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentee-overview-page-next-icon-label": "Icon label in the next table page icon\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentee-overview-page-prev-icon-label": "Icon label in the previous table page icon\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentee-overview-unstar-mentee-icon-label": "Icon label for the unstar icon in the mentee table rows\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-headline": "Headline for screen that's displayed to mentors with zero mentees\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-text": "Text shown in screen that's displayed to mentors with zero mentees\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-headline": "Headline for screen that's displayed to mentors with zero mentees\n\n{{doc-growthexperiments-mentor-dashboard}}",
