--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -10,7 +10,8 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-headline": "{{GENDER:|Your}} mentees",
 	"growthexperiments-mentor-dashboard-mentee-overview-intro": "See {{GENDER:|your}} mentees below. Use the filters to change which mentees are shown.",
 	"growthexperiments-mentor-dashboard-mentee-overview-no-js-fallback": "The table requires JavaScript. Please enable JavaScript to be able to use this module.",
-	"growthexperiments-mentor-dashboard-mentee-overview-info-headline": "Who is in your table?",
+	"growthexperiments-mentor-dashboard-mentee-overview-info-headline": "Who is in {{GENDER:your}} table?",
+	"growthexperiments-mentor-dashboard-mentee-overview-info-icon-label": "More information about who is in {{GENDER:|your}} table",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-text": "This table shows {{GENDER:|your}} mentees whose account was created within the past two weeks or who have edited in the last six months, and have the [[:mw:Special:MyLanguage/Growth/Feature_summary#NH|newcomer homepage enabled]]. Data is updated every three hours.",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-headline": "Legend",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-star": "Bookmark mentees",
@@ -31,11 +32,17 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-active-days-ago-days-title": "Filter to mentees active in the last $2 {{PLURAL:$1|day|days}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-active-days-ago-months-title": "Filter to mentees active in the last $2 {{PLURAL:$1|month|months}}",
 	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-starred-only-starred": "Only show starred mentees",
+	"growthexperiments-mentor-dashboard-mentee-overview-filters-expand-icon-label": "Expand the mentees filters form",
+	"growthexperiments-mentor-dashboard-mentee-overview-filters-collapse-icon-label": "Collapse the mentees filters form",
 	"growthexperiments-mentor-dashboard-mentee-overview-search-placeholder": "Search",
 	"growthexperiments-mentor-dashboard-mentee-overview-active-ago": "active $1 ago",
 	"growthexperiments-mentor-dashboard-mentee-overview-registered-unknown": "unknown",
 	"growthexperiments-mentor-dashboard-mentee-overview-show-entries": "Show $1",
+	"growthexperiments-mentor-dashboard-mentee-overview-star-mentee-icon-label": "Star mentee",
 	"growthexperiments-mentor-dashboard-mentee-overview-page-counter": "$1 of $2",
+	"growthexperiments-mentor-dashboard-mentee-overview-page-next-icon-label": "Next page of results",
+	"growthexperiments-mentor-dashboard-mentee-overview-page-prev-icon-label": "Previous page of results",
+	"growthexperiments-mentor-dashboard-mentee-overview-unstar-mentee-icon-label": "Unstar mentee",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-headline": "Mentee data unavailable",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-text": "You may not have any mentees assigned yet. Data is updated every three hours.",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-headline": "No mentees found",
