QuitMentorship: Do not check if a mentor has mentees with structured list
The only way for mentors to quit when a structured mentor
list is enabled is to use Special:QuitMentorship. Currently,
mentors are unable to use this page if they do not have any mentees.
This is not correct, because this leaves them unable to sign up
unless they claim someone (or are assigned someone), which is absurd.

This patch changes this behavior, and lets all current mentors
to use Special:QuitMentorship.

Bug: T312577
Change-Id: Ice7b2162cc78539ec7fa4cf221eb84f4335ee30b

--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -84,6 +84,7 @@
 	"growthexperiments-quit-mentorship-listed-as-mentor-pretext": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-not-listed-has-mentees-pretext": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-has-mentees-pretext": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-quit-mentorship-error-not-a-mentor": "Error in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-reason": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}\n{{Identical|Reason}}",
 	"growthexperiments-quit-mentorship-reassign-mentees-confirm": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-quit-mentorship-success": "Label in Special:QuitMentorship\n\n{{doc-growthexperiments-mentor-dashboard}}",
