SpecialEnrollAsMentor: Remove 'reason' field
It is confusing, and the edit summary it was
used for is easily replacable with a fixed edit summary

Per consensus at T312102#8062826.

Bug: T313252
Change-Id: I13a8c7ff634ab222551957404e2757eb8f37677c

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -132,6 +132,7 @@
 	"growthexperiments-mentorship-enrollasmentor-form-reason": "Reason",
 	"growthexperiments-mentorship-enrollasmentor-enroll": "Enroll",
 	"growthexperiments-mentorship-enrollasmentor-success": "{{GENDER:|You}} are now enrolled as a mentor. {{GENDER:|You}} can continue to [[Special:MentorDashboard|the mentor dashboard]] now.",
+	"growthexperiments-mentorship-enrollasmentor-summary": "Adding myself as a mentor",
 	"tag-mentor list change": "Change of the mentor list",
 	"tag-mentor list change-description": "Tag applied to edits made to the structured mentor list via GrowthExperiments"
 }
