--- a/i18n/welcomesurvey/en.json
+++ b/i18n/welcomesurvey/en.json
@@ -48,5 +48,8 @@
 	"welcomesurvey-question-email-help": "We noticed {{GENDER:|you}} didn’t enter an email when creating this account. It’s <strong>highly recommended</strong>, since an email is needed for account recovery if you ever lose your password. NOTE: Your email address is not revealed when other users contact you.",
 	"welcomesurvey-question-languages-label": "{{SITENAME}} is available in nearly 300 languages. Are there other languages {{GENDER:|you}} read and write in?",
 	"welcomesurvey-question-languages-placeholder": "Add up to {{PLURAL:$1|one language|$1 languages}}...",
-	"welcomesurvey-question-languages-maximum": "{{GENDER:|You}} have added the maximum number of languages."
+	"welcomesurvey-question-languages-maximum": "{{GENDER:|You}} have added the maximum number of languages.",
+	"welcomesurvey-reminder": "Help us improve {{GENDER:|your}} Wikipedia experience by answering a few optional questions in our Welcome Survey. $1",
+	"welcomesurvey-reminder-link": "Take the survey",
+	"welcomesurvey-reminder-dismiss": "Dismiss"
 }
