--- a/i18n/welcomesurvey/qqq.json
+++ b/i18n/welcomesurvey/qqq.json
@@ -57,5 +57,9 @@
 	"welcomesurvey-question-languages-maximum": "Error messages shown below the languages field, shown in a welcome survey to new accounts. Displayed when the user has added the maximum number of languages and cannot add any more.",
 	"welcomesurvey-reminder": "Reminder shown to users on Special:Homepage if they have not filled out the welcome survey yet.\n\nParameters:\n* $1 - Link to the survey (({{msg-mw|welcomesurvey-reminder-link}}).",
 	"welcomesurvey-reminder-link": "Link to the welcome survey. Used in {{msg-mw|welcomesurvey-reminder}}.",
-	"welcomesurvey-reminder-dismiss": "Invisible button label (for accessibility purposes) for dismissing the welcome survey reminder on Special:Homepage."
+	"welcomesurvey-reminder-dismiss": "Invisible button label (for accessibility purposes) for dismissing the welcome survey reminder on Special:Homepage.",
+	"welcomesurvey-mideditsignup-title": "Title of dialog shown after finishing an edit if the user has created their account during that edit. \n\nParameters:\n* $1 - Username.",
+	"welcomesurvey-mideditsignup-body": "Body of dialog shown after finishing an edit if the user has created their account during that edit.",
+	"welcomesurvey-mideditsignup-button-homepage": "Button of dialog shown after finishing an edit if the user has created their account during that edit. The button links to Special:Homepage.",
+	"welcomesurvey-mideditsignup-button-close": "Button of dialog shown after finishing an edit if the user has created their account during that edit. The button closes the dialog."
 }
